# flet_notifications

./: README.md  docs.md  pyproject.toml
examples/flet_notifications_example/: .gitignore  main.py  pyproject.toml
examples/flet_notifications_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/flet_notifications_example/src/: main.py
src/flet_notifications/: __init__.py  flet_notifications.py
src/flet_notifications.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flutter/flet_notifications/: .gitignore  README.md
src/flutter/flet_notifications/lib/: flet_notifications.dart
src/flutter/flet_notifications/lib/src/: create_control.dart  flet_notifications.dart
