[project]
name = "flet-notifications"
version = "0.1.0"
description = "FletNotifications control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.27.5",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-notifications"
Repository = "https://github.com/MyGithubAccount/flet-notifications"
Issues = "https://github.com/MyGithubAccount/flet-notifications/issues"

[tool.setuptools.package-data]
"flutter.flet_notifications" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.5",
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.5"}

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
