[project]
name = "flet-notifications"
version = "0.1.1"
description = "FletNotifications control for Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Reuben Brown", email = "you@example.com" }
]
dependencies = [
    "flet>=0.70.0.dev5103",
    "flet-cli>=0.70.0.dev5103",
    "flet-desktop>=0.70.0.dev5103",
    "flet-desktop-light>=0.70.0.dev5103",
    "flet-permission-handler>=0.2.0.dev39",
]

[project.urls]
Homepage = "https://github.com/reubenbrown13/flet_notifications"
Documentation = "https://github.com/reubenbrown13/flet_notifications"
Repository = "https://github.com/reubenbrown13/flet_notifications"
Issues = "https://github.com/reubenbrown13/flet_notifications/issues"

[tool.setuptools.package-data]
"flutter.flet_notifications" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet>=0.70.0.dev5103",
    "flet-cli>=0.70.0.dev5103",
    "flet-desktop>=0.70.0.dev5103",
    "flet-desktop-light>=0.70.0.dev5103",
    "flet-permission-handler>=0.2.0.dev39",
]

[tool.poetry.group.dev.dependencies]
flet = {version = "0.70.0.dev5103"}
flet-cli = {version = "0.70.0.dev5103"}
flet-desktop = {version = "0.70.0.dev5103"}
flet-desktop-light = {version = "0.70.0.dev5103"}
flet-permission-handler = {version = "0.2.0.dev39"}

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
