[project]
name = "flet-notifications-example"
version = "1.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet-notifications",
  "flet>=0.70.0.dev5103",
  "flet-cli>=0.70.0.dev5103",
  "flet-desktop>=0.70.0.dev5103",
  "flet-desktop-light>=0.70.0.dev5103",
  "flet-permission-handler>=0.2.0.dev39",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-notifications-example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MyCompany"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-notifications = "../../" # relative path

[tool.uv]
dev-dependencies = [
    "flet>=0.70.0.dev5103",
    "flet-cli>=0.70.0.dev5103",
    "flet-desktop>=0.70.0.dev5103",
    "flet-desktop-light>=0.70.0.dev5103",
    "flet-permission-handler>=0.2.0.dev39",
]

[tool.uv.sources]
flet-notifications = { path = "../../", editable = true }

[tool.poetry.group.dev.dependencies]
flet = {version = "0.70.0.dev5103"}
flet-cli = {version = "0.70.0.dev5103"}
flet-desktop = {version = "0.70.0.dev5103"}
flet-desktop-light = {version = "0.70.0.dev5103"}
flet-permission-handler = {version = "0.2.0.dev39"}
flet-notifications = {path = "../../", develop = true}